--- a/Docker-files/db/Dockerfile
+++ b/Docker-files/db/Dockerfile
@@ -1,8 +1,7 @@
 FROM mysql:8.0.33
-LABEL "Project"="Vprofile"
+LABEL Project="Vprofile"
 
-ADD db_backup.sql /docker-entrypoint-initdb.d/
 ENV MYSQL_ROOT_PASSWORD=vprodbpass
-ENV MYSQL_DATABASE="accounts"
+ENV MYSQL_DATABASE=accounts
 
-EXPOSE 3306
+ADD db_backup.sql /docker-entrypoint-initdb.d/db_backup.sql
